force-app/main/default/objects/maps__AdvRouteOutputType__c/maps__AdvRouteOutputType__c.object-meta.xml
<CustomObject>
    <description>This holds Advanced Route output type configurations</description>
    <label>Maps Advanced Route Output Type</label>
    <nameField>
        <label>Maps Advanced Route Output Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Output Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>