force-app/main/default/objects/maps__AdvRouteOutputType__c/fields/maps__AssociatedObjectFieldMapping__c.field-meta.xml
<CustomField>
    <fullName>maps__AssociatedObjectFieldMapping__c</fullName>
    <description>This is a JSON object that holds the mapping of different Routable objects to the output type</description>
    <label>Associated Object Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>