force-app/main/default/objects/maps__AdvRouteOutputType__c/fields/maps__AvailableOutputTypeFor__c.field-meta.xml
<CustomField>
    <fullName>maps__AvailableOutputTypeFor__c</fullName>
    <description>These are the selected route objects that this output type is available for</description>
    <label>Available Output Type For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>