force-app/main/default/objects/maps__AdvRouteOutputType__c/fields/maps__DefaultValues__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultValues__c</fullName>
    <description>This is a JSON object that holds the default values for any fields</description>
    <label>Default Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>