force-app/main/default/objects/maps__AdvRouteOutputType__c/fields/maps__Object__c.field-meta.xml
<CustomField>
    <fullName>maps__Object__c</fullName>
    <description>This is the api of the output object</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>