force-app/main/default/objects/maps__AdvRouteOutputType__c/fields/maps__StartDateTimeField__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDateTimeField__c</fullName>
    <description>This is the field that holds the start date time</description>
    <label>Start DateTime Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>